# testing-python-logging

./: README.md  outer_and_inner_logger.py  pyproject.toml
src/testing_logging/: __init__.py  logging_conf.py  main.py
src/testing_python_logging/: __init__.py  example_plot.py  main.py  module1.py  module2.py
