[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testing_python_logging"
dynamic = ["version"]
description = 'testing_python_logging'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Christian Tabedzki", email = "35670232+tabedzki@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tabedzki/testing_python_logging#readme"
Issues = "https://github.com/tabedzki/testing_python_logging/issues"
Source = "https://github.com/tabedzki/testing_python_logging"

[tool.hatch.version]
path = "src/testing_python_logging/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "matplotlib",
]
[tool.hatch.build.targets.wheel]
packages = ["src/testing_python_logging"]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/testing_python_logging tests}"

[tool.coverage.run]
source_pkgs = ["testing_python_logging", "tests"]
branch = true
parallel = true
omit = [
  "src/testing_python_logging/__about__.py",
]

[tool.coverage.paths]
testing_python_logging = ["src/testing_python_logging", "*/testing-logging/src/testing_python_logging"]
tests = ["tests", "*/testing-logging/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
